# forkscore-app

./: .gitignore  AGENTS.md  README.md  docker-compose.yaml  docker-compose.yml  skills-lock.json
.specify/: feature.json  (+2 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  jest.config.js  nest-cli.json  package.json  pyproject.toml  tsconfig.json
backend/src/: __init__.py  app.module.ts  health-check.controller.ts  main.py  main.ts
backend/src/app/: __init__.py  api.py  settings.py
backend/src/common/dtos/: response.dto.ts
backend/src/common/exceptions/: domain.exception.ts
backend/src/common/filters/: http-exception.filter.ts
backend/src/config/: auth.config.ts  database.config.ts
backend/src/database/migrations/: 1698765432100-create_users.ts
backend/src/modules/auth/: auth.module.ts
backend/src/modules/auth/application/: __init__.py  auth.service.ts  dtos.py
backend/src/modules/auth/domain/: __init__.py  auth.types.ts  errors.py
backend/src/modules/auth/infra/: __init__.py
backend/src/modules/auth/presentation/: __init__.py  auth.controller.ts
backend/src/modules/health/application/: __init__.py
backend/src/modules/health/domain/: __init__.py
backend/src/modules/health/presentation/: __init__.py
backend/src/modules/places/: __init__.py  places.module.ts
backend/src/modules/reviews/: reviews.module.ts
backend/src/modules/users/: users.module.ts
backend/src/shared/: __init__.py
backend/src/shared/infra/: __init__.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_places.py  test_reviews.py  test_users.py
(+283 files in other folders)
